[gd_scene load_steps=7 format=3 uid="uid://d32nbnva3uh48"]

[ext_resource type="Script" path="res://Assets/Scripts/spawnedItems.gd" id="1_1wljo"]
[ext_resource type="Texture2D" uid="uid://lg1cxlj0scge" path="res://Assets/Art/spriteSheet.png" id="2_7utsg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur4yr"]
atlas = ExtResource("2_7utsg")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_noduk"]
atlas = ExtResource("2_7utsg")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5ibc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur4yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noduk")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gmt0w"]
radius = 7.07107

[node name="collectable" type="Node2D"]
script = ExtResource("1_1wljo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r5ibc")
autoplay = "default"
frame_progress = 0.441109

[node name="collect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collect"]
shape = SubResource("CircleShape2D_gmt0w")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="collect" to="." method="_on_collect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
