[gd_scene load_steps=10 format=3 uid="uid://bprrglww8ex53"]

[ext_resource type="Script" path="res://Assets/Scripts/spawnedItems.gd" id="1_q2xl2"]
[ext_resource type="Texture2D" uid="uid://lg1cxlj0scge" path="res://Assets/Art/spriteSheet.png" id="1_t2n8i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ovp3"]
atlas = ExtResource("1_t2n8i")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jqg3"]
atlas = ExtResource("1_t2n8i")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rytah"]
atlas = ExtResource("1_t2n8i")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg6rc"]
atlas = ExtResource("1_t2n8i")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frh45"]
atlas = ExtResource("1_t2n8i")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb2a8"]
atlas = ExtResource("1_t2n8i")
region = Rect2(112, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0gii"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ovp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jqg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rytah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg6rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frh45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb2a8")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="enemy1" type="Node2D"]
script = ExtResource("1_q2xl2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k0gii")
autoplay = "default"
frame_progress = 0.193417
flip_h = true

[node name="enemy1" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="enemy1"]
polygon = PackedVector2Array(0, -3, -5, 6, 5, 6)

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="body_entered" from="enemy1" to="." method="_on_enemy_1_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
